--- a/index.html
+++ b/index.html
@@ -388,8 +388,19 @@
             </li>
           </ul>
         </div>
-      </div>
-    </footer>
+        <div class="subscribe">
+           <h3 class="title">Подпишитесь на рассылку</h3>
+        <form class="form-footer">
+          <label class="field-footer">
+            <input type="email" class="input-footer" name="email" placeholder="E-mail" />
+          </label>
+          <button type="submit" class="footer-button">Подписаться
+            <svg class="icon" width="24px" height="24px">
+            <use href="./images/svg/symbol-defs.svg#icon-icon-send"></use>
+          </svg>
+          </button>
+        </form>
+        </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close class="modal-button" type="button">
