--- a/portfolio.html
+++ b/portfolio.html
@@ -300,6 +300,20 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <h3 class="title">Подпишитесь на рассылку</h3>
+          <form class="form-footer">
+            <label class="field-footer">
+              <input type="email" class="input-footer" name="email" placeholder="E-mail" />
+            </label>
+            <button type="submit" class="footer-button">
+              Подписаться
+              <svg class="icon" width="24px" height="24px">
+                <use href="./images/svg/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
